# towitoko-linux

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  THANKS  aclocal.m4  config.h.in  configure  configure.ac  index.htm  index.html  key.txt  reconf
debian/: changelog  control  copyright  libtowitoko-dev.examples  libtowitoko-dev.install  libtowitoko-dev.manpages  libtowitoko2.config  libtowitoko2.install  libtowitoko2.postinst  libtowitoko2.postrm  libtowitoko2.prerm  libtowitoko2.templates  rules  towitoko-tester.1  towitoko-tester.sgml
debian/po/: POTFILES.in  cs.po  da.po  de.po  es.po  fr.po  it.po  ja.po  nl.po  pl.po  pt.po  ru.po  sk.po  sv.po  templates.pot  vi.po
doc/: ChangeLog  Info.plist  Makefile.am  Makefile.in  NEWS  ctapi.3  ctapi.sgml  ctbcs.3  ctbcs.sgml  design.htm  design.html  design.sgml  reader.conf
src/: Makefile.am  Makefile.in
src/ct-api/: Makefile.am  Makefile.in  cardterminal.c  cardterminal.h  ct_list.c  ct_list.h  ct_slot.c  ct_slot.h  ctapi.c
src/driver/: Makefile.am  Makefile.in  apdu.c  apdu.h  atr.c  atr.h  atr_sync.c  atr_sync.h  defines.h  icc_async.c  icc_async.h  icc_sync.c  icc_sync.h  ifd_towitoko.c  ifd_towitoko.h  io_serial.c  io_serial.h  pps.c  pps.h  protocol_sync.c  protocol_sync.h  protocol_t0.c  protocol_t0.h  protocol_t1.c  protocol_t1.h  t1_block.c  t1_block.h  tlv_object.c  tlv_object.h
src/ifd-handler/: Makefile.am  Makefile.in  ifdhandler.c  ifdhandler.h
src/test/: Makefile.am  Makefile.in  tester.c
